# CS236

./: CMakeLists.txt  Datalog.cpp  Datalog.h  Parameter.h  Parser.h  Predicate.h  Relation.cpp  Relation.h  Rule.h  Scanner.h  Scheme.cpp  Scheme.h  Token.h  Tuple.cpp  Tuple.h  main.cpp
